# C_python_trans

./: README.md
Boost_python/: README.md
Boost_python/1-note/: 001-download.md  002-01-HelloWorld.md  002-02-ExposingClasses.md  002-example.md
Boost_python/2-code/: boost_20_04.dockerfile
Boost_python/2-code/001-boost_thread/: main_v1.cpp  main_v2.cpp
Boost_python/2-code/002-example/: build.py  clean.py
Boost_python/2-code/002-example/01-HelloWorld/: CMakeLists.txt  build.sh  make.sh
Boost_python/2-code/002-example/02-ExposingClasses/: CMakeLists.txt  build.sh  clean.sh
Boost_python/2-code/002-example/03-Constructors/: build.sh
Boost_python/2-code/002-example/10-Embedding/: build.sh
Boost_python/2-code/002-example/13-AutoInstantiation/: build.sh
libtorch/1-note/: 001-install.md  002-example.md
libtorch/2-code/001-gen_matrix/: CMakeLists.txt  build.sh  clean.sh
libtorch/2-code/002-matrix_mul/: CMakeLists.txt  matrix_mul.cpp
pybind/1-note/: 001-install.md
pybind/2-code/001-torch_matrix/: build.sh  pybind11_torch_matrix.cpp
